Thu May 10 10:22:46 2001  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_server_new_interface): 
	   If iface is NULL, the OS will choose the address and 
	   port.
	* src/server.c (gnet_server_new): Allow iface to be NULL
	
	* src/pack.c (gnet_calcsize): Added
	* src/pack.c (gnet_vcalcsize): Exposed

Wed Apr 25 14:27:26 2001  David Helder  <dhelder@umich.edu>

	* src/server.[hc] (gnet_server_new): Changed prototype
	   so port not included.  Now uses new_interface

Tue Apr 24 15:10:19 2001  David Helder  <dhelder@umich.edu>

	* src/md5.c (gnet_md5_get_digest): Added cast to 
	   supress warning

	* src/udp.c (gnet_udp_socket_interface_new): Added
	
	* src/udp.c (gnet_udp_socket_new_interface): SO_BROADCAST
	   set by default

	* src/tcp.c (gnet_tcp_socket_server_interface_new): Added.
	* src/tcp.c (gnet_tcp_socket_server_new2): Above replaces

Mon Apr 23 7:07:21 2001  Andrew Lanoix  <alanoix@umich.edu>

	* src/gnet-private.c (gnet_MainCallBack - Win32 ONLY):
	  Explicitly force GNet to grab only its own messages,
	  Found by Anthony Lee. 

Mon Apr  9 17:10:09 2001  David Helder  <dhelder@umich.edu>

	* src/iochannel.c (gnet_io_channel_readn): Bug fix from Wolfgang
	   Borgert.

Fri Mar 30 11:57:21 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Checking for param.h incorrectly

Tue Mar  6 15:31:13 2001  David Helder  <dhelder@umich.edu>

	* src/iochannel.c (gnet_io_channel_readline_strdup): 
	   Fixed bug when buffer lengthened (off by one).
	   Found by Simon Li.
	
Sun Mar  4 5:04:45 2001  Andrew Lanoix  <alanoix@umich.edu>

	* src/gnet-private.[ch]
	* src/iochannel.[ch]
	* gnet.def  Removed Glib 1.2 workaround.

	* gnet.dsp  Link to glib-1.3.lib.

	* README.win32 Cleanup and further clarify linking with
	  mingw/gcc.

Tue Feb 27 15:55:56 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c:  Fixed const issues for Windows
	* src/tcp.c:
	* src/sha.c:

	* src/server.[hc]: s/interface/iface because interface