@@ -1,3 +1,9 @@
+Fri May 11 14:58:24 2001  David Helder  <dhelder@umich.edu>
+
+	* tests/unpack.c (main): Fixed the warnings :-)
+	
+	* src/inetaddr.c (gnet_inetaddr_new_any): Added.
+
 Thu May 10 10:22:46 2001  David Helder  <dhelder@umich.edu>
 
 	* src/tcp.c (gnet_tcp_socket_server_new_interface): 
